# PQuantomatic

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: self_study.md
pquantomatic/: __init__.py  example.py  plotting.py
pquantomatic/bond/: bond.py  valuation.py
tests/: bond_test.py  planets.csv  test_example.py  valuation_test.py
